--- a/style.css
+++ b/style.css
@@ -1,126 +1,155 @@
 /* add fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inder&family=Margarine&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap');
-*{
+
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
+
 :root {
     /*----------------- font-family ----------------------*/
-    --ff-primary : "roboto", sans-serif;
+    --ff-primary: "roboto", sans-serif;
     --ff-secondary: "inter", sans-serif;
-    --ff-design:"satisfy", cursive;
-    --ff-brand:"margarine", sans-serif;
+    --ff-design: "satisfy", cursive;
+    --ff-brand: "margarine", sans-serif;
     /* ------------------color---------------------------- */
---clr-white: #fff;
---clr-dark: #333;
---clr-grey-1: #102a42;
---clr-grey-2: #617d98;
---clr-grey-3: #f1f5f8;
---clr-primary: #f53b57;
---clr-primary-light: #f04660;
---clr-secondary: #e9b949;
+    --clr-white: #fff;
+    --clr-dark: #333;
+    --clr-grey-1: #102a42;
+    --clr-grey-2: #617d98;
+    --clr-grey-3: #f1f5f8;
+    --clr-primary: #f53b57;
+    --clr-primary-light: #f04660;
+    --clr-secondary: #e9b949;
 
-/* -------trasition------- */
---transition: all 0.3s linear;
+    /* -------trasition------- */
+    --transition: all 0.3s linear;
 }
+
 /* -----------Global CSS----------- */
-a{
+a {
     text-decoration: none;
 }
-img{
+
+img {
     width: 100%;
     display: block;
 }
-h1,h2,h3,h4,h5{
+
+h1,
+h2,
+h3,
+h4,
+h5 {
     text-transform: capitalize;
     line-height: 1.25;
     margin-bottom: 10px;
     letter-spacing: 0.5px;
 
 }
-h1{
+
+h1 {
     font-size: 48px;
 }
-h2{
+
+h2 {
     font-size: 32px;
 }
-h3{
-    font-size: 24px ;
+
+h3 {
+    font-size: 24px;
 }
-h4{
-    font-size: 14px ;
+
+h4 {
+    font-size: 14px;
 }
-p{
+
+p {
     margin-bottom: 25px;
-} 
-body{
+}
+
+body {
     font-family: var(--ff-primary);
     font-size: 12px;
     background-color: var(--clr-white);
     color: var(--clr-grey-1);
     line-height: 1.5;
 }
+
 /* -------------Navbar----------------- */
-.nav-bdn svg{
-    fill:var(--clr-primary);
+.nav-bdn svg {
+    fill: var(--clr-primary);
     position: fixed;
     top: 3%;
     left: 1%;
     cursor: pointer;
+    z-index: 100;
 }
-.navbar{
+
+.navbar {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0,0,0.9);
+    background-color: rgba(0, 0, 0, 0.9);
     transform: translateX(-100%);
     transition: var(--transition);
+    z-index: 99;
 }
-#nav-check{
+
+#nav-check {
     display: none;
 }
-#nav-check:checked ~ .navbar{
+
+#nav-check:checked~.navbar {
     transform: translate(0%);
 }
-.nav-header h3{
+
+.nav-header h3 {
     padding: 16px;
     font-size: 24px;
     text-align: center;
     text-transform: uppercase;
     font-weight: 700;
     color: transparent;
-    background-image:linear-gradient(180deg,var(--clr-primary) 25%,var(--clr-secondary)) ;
+    background-image: linear-gradient(180deg, var(--clr-primary) 25%, var(--clr-secondary));
     background-clip: text;
     margin-bottom: -16px;
 }
-.nav-header img{
+
+.nav-header img {
     width: 100px;
     margin: 0 auto;
 }
-.nav-header{
+
+.nav-header {
     position: relative;
 }
-.nav-close{
+
+.nav-close {
     position: absolute;
     top: 5px;
-    right:5px;
+    right: 5px;
 }
-.nav-close svg{
-    fill:var(--clr-dark) ;
+
+.nav-close svg {
+    fill: var(--clr-dark);
     cursor: pointer;
-    transition:var(--transition);
+    transition: var(--transition);
 }
-.nav-close svg:hover{
-    fill:var(--clr-white);
-    
+
+.nav-close svg:hover {
+    fill: var(--clr-white);
+
 }
-.nav-item{
+
+.nav-item {
     list-style-type: none;
 }
-.nav-link{
+
+.nav-link {
     display: block;
     color: var(--clr-white);
     text-transform: uppercase;
@@ -129,16 +158,144 @@ body{
     letter-spacing: 0.5px;
     transition: var(--transition);
 }
-.nav-link:hover{
+
+.nav-link:hover {
     background-color: var(--clr-primary);
     padding-left: 24px;
     border-left: 8px solid var(--clr-secondary);
-    
+
 }
+
 @media screen and (min-width:768px) {
-    .navbar{
+    .navbar {
         width: 35%;
         max-width: 400px;
     }
-   
+
 }
+
+/* ----------banner--------- */
+.banner {
+    min-height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(./img/checkenbg.jpg) center/cover no-repeat fixed;
+    position: relative;
+
+}
+
+header {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.header h2 {
+    font-family: var(--ff-design);
+    color: transparent;
+    background-image: linear-gradient(180deg, var(--clr-primary), var(--clr-secondary));
+    background-clip: text;
+}
+
+.header h1 {
+    font-family: var(--ff-brand);
+    color: var(--clr-white);
+    margin-top: 20px;
+    margin-bottom: 32px;
+    font-weight: 400;
+    text-shadow: 2px 5px 5px var(--clr-primary);
+    animation: flame 1s ;
+    animation-iteration-count: infinite;
+}
+@keyframes flame {
+    0%,
+    100%{
+        text-shadow: 0 -5px 10px rgba(255,69,0,0.6),0 -5px 20px rgba(255,69,0,0.4),0 -5px 30px rgba(255,69,0,0.2)
+        ,0 -5px 40px rgba(255,69,0,0.1);
+    }
+    25%{
+        text-shadow: 0 -5px 15px rgba(255,69,0,0.8),0 -5px 30px rgba(255,69,0,0.6),0 -5px 45px rgba(255,69,0,0.4)
+        ,0 -5px 10px rgba(255,69,0,0.2);
+    }
+    50%{
+        text-shadow: 0 -5px 20px rgba(255,69,0,0.8),0 -5px 40px rgba(255,69,0,0.6),0 -5px 60px rgba(255,69,0,0.4)
+        ,0 -5px 80px rgba(255,69,0,0.2);
+    }
+    75%{
+        text-shadow: 0 -5px 15px rgba(255,69,0,0.8),0 -5px 30px rgba(255,69,0,0.6),0 -5px 45px rgba(255,69,0,0.4)
+        ,0 -5px 60px rgba(255,69,0,0.2);
+    }
+}
+header a {
+    color: white;
+    display: inline-block;
+    transition: var(--transition);
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    padding: 15px 20px;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    border: none;
+    cursor: pointer;border-radius: 1000px;
+    box-shadow: 0 1px 3px rgba(0,0, 0, 0.4);
+    
+
+}
+header a:hover{
+    background-color: var(--clr-primary-light);
+    outline: 3px solid var(--clr-primary-light);
+    outline-offset: 3px;
+}
+/* -----------------features--------------- */
+.features{
+    background-color: var(--clr-grey-3);
+    position: relative;
+    
+}
+.features--one{
+    padding: 40px 0;
+    text-align: center;
+    cursor: pointer;
+    transition: var(--transition);
+}
+.features--one:hover{
+box-shadow: 0px 5px 10px var(--clr-primary);
+background-color: var(--clr-white);
+}
+.features--one p{
+    color: var(--clr-grey-2);
+    max-width: 17rem;
+    margin: 0 auto;
+    
+}
+.features--one svg{
+    fill: var(--clr-grey-2);
+    transition: var(--transition);
+}
+.features--one:hover svg{
+    fill: var(--clr-primary);
+    transform: translateY(-10px);
+
+}
+.features--one h2{
+    color: var(--clr-grey-1);
+}
+.features--one:hover h2{
+    color: var(--clr-primary);
+}
+@media screen and (min-width:576px)
+{
+    .features--one{
+        width: 50%; 
+        float: left;
+    }
+  
+}
+@media screen and (min-width:1200px){
+    .features--one{
+        width: 25%;
+    }
+    
+}
+
