--- a/style.css
+++ b/style.css
@@ -76,6 +76,12 @@ body {
     color: var(--clr-grey-1);
     line-height: 1.5;
 }
+.clear-fix::after,
+.clear-fix::before{
+    content: "";
+    clear: both;
+    display: table;
+}
 
 /* -------------Navbar----------------- */
 .nav-bdn svg {
@@ -247,8 +253,12 @@ header a:hover{
     outline: 3px solid var(--clr-primary-light);
     outline-offset: 3px;
 }
+.divided{
+    height: 10px;
+    background-image: linear-gradient(to left, var(--clr-primary),var(--clr-secondary),var(--clr-primary));
+}
 /* -----------------features--------------- */
-.features{
+.features {
     background-color: var(--clr-grey-3);
     position: relative;
     
@@ -298,4 +308,66 @@ background-color: var(--clr-white);
     }
     
 }
+/* ------------------about------------------- */
+.about{
+    padding:4rem 1rem;
+    width: 85vh;
+    margin: 0 auto;
+    max-width: 1170px;
+}
+.about--img,
+.about--detials{
+    padding: 2rem,0;
+}
+.about--img {
+    border-radius: 5px;
+    overflow: hidden;
+    max-width: 480px;
+    box-shadow: 0px 3px 5px rgba(0,0,0, 0.4);
+    background-color: var(--clr-primary);
+}
+.about--img img{
+    transition: var(--transition);
+}
+.about--img img:hover{
+    transform: scale(1.1);
+    
+    opacity: 0.5;
 
+}
+.about--detials h2{
+    color: transparent;
+    font-family: var(--ff-design);
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    background-clip: text;
+    margin-top: 10px;
+}
+.about--detials h3{
+    text-transform: uppercase;
+    color: var(--clr-grey-1);
+    margin-bottom: 20px;
+
+}
+.about--detials p{
+    margin-bottom: 20px;
+    color: var(--clr-grey-2);
+    max-width: 26rem;
+}
+.about--detials a{
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    padding: 15px;
+    color: white;
+}
+@media screen and (min-width: 992px){
+    .about--img,.about--detials{
+        float: left;
+        width: 50%;
+    }
+    .about--detials{
+        padding-left: 30px;
+    }
+    .about{
+        width: 118vh;
+        padding: 4rem 1rem;
+    }
+}
