--- a/style.css
+++ b/style.css
@@ -82,7 +82,9 @@ body {
     clear: both;
     display: table;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 /* -------------Navbar----------------- */
 .nav-bdn svg {
     fill: var(--clr-primary);
@@ -111,6 +113,7 @@ body {
 
 #nav-check:checked~.navbar {
     transform: translate(0%);
+    z-index: 101;
 }
 
 .nav-header h3 {
@@ -370,4 +373,283 @@ background-color: var(--clr-white);
         width: 118vh;
         padding: 4rem 1rem;
     }
+}
+.product{
+    padding: 0 30px;
+    background-color: var(--clr-grey-3);
+}
+.product--content{
+    text-align: center;
+}
+.product--content h2{
+    font-family: var(--ff-design);
+    color: transparent;
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    background-clip: text;
+    margin-top: 20px;
+}
+.product--content h3{
+    font-family: var(--ff-primary);
+    color: var(--clr-grey-1);
+    text-transform: uppercase;
+}
+.product--content p{
+    color: var(--clr-grey-2);
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+.product--content a{
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    padding: 10px;
+    color: white;
+    overflow: hidden;
+    margin-bottom: 40px;
+}
+.product--img--main h4{
+    color: var(--clr-primary);
+    text-align: center;
+    margin-bottom:-15px;
+    padding-bottom: 20px;
+}
+.product--img--main h3{
+    color: var(--clr-grey-1);
+    text-align: center;
+    margin-top: 15px;
+}
+.product--img--main img{
+    height: 17rem;
+    width:90%;
+    margin: 0 auto;
+    margin-top: 30px;
+    box-shadow: 0px 5px 4px rgba(0,0,0,0.4);
+    border-radius: 5px;
+    transition: var(--transition);
+    object-fit: cover;
+}
+.product--img--main img:hover{
+    box-shadow: 0px 5px 4px rgba(0,0,0,0.6);
+    transform: translateY(-3px);
+}
+
+@media screen and (min-width:768px){
+
+    .product--img--main{
+        width: 50%; 
+        float: left;
+    }
+}
+@media screen and  (min-width:992px){
+    .product--img--main{
+        width: 33.33%;
+    }
+}
+/* ------------explore-------------------------- */
+.service{
+    padding: 0 20px;
+}
+.service--header{
+    margin: 50px 0;
+    text-align: center;
+}
+.service--header h3{
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    color: transparent;
+    background-clip: text;
+    font-family: var(--ff-design);
+}
+.service--header h2{
+    color: var(--clr-grey-1);
+    text-transform: uppercase;
+}
+.service--info--main--1{
+    background-color: var(--clr-grey-3);
+    height: 400px;
+    margin-bottom: 80px;
+    position: relative;
+    box-shadow: 0 5px 5px rgba(0, 0,0,0.2);
+    transition: var(--transition);
+}
+.service--info--main--1:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 5px 5px rgba(0, 0,0,0.4);
+}
+.service--info--main--1 img{
+    border-radius: 5px;
+    overflow: hidden;
+    height: 200px;
+    object-fit: cover;
+    
+    
+}
+.service--info--main--1 svg{
+    fill: var(--clr-white);
+    background-color: var(--clr-primary);
+    border-radius: 1000px;
+    padding: 10px;
+    border: solid 5px var(--clr-white);
+    position: absolute;
+    top: 43%;
+    left: 43%;
+    cursor: pointer;
+    display: grid;
+    place-items:center;
+}
+.service--info--main--1--element{
+    text-align: center;padding: 28px 16px 16px 28px;
+}
+
+.service--info--main--1 h3{
+    color: transparent;
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    text-align: center;
+    background-clip: text;
+    margin-top: 30px;
+}
+.service--info--main--1 p{
+    text-align: center;
+    max-width: 100%;
+    color: var(--clr-grey-2);
+}
+.service--info--main--1 a{
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    padding: 10px;
+    color: var(--clr-white);
+}
+@media screen and (min-width:768px) {
+    .service--info--main--1{
+        width: 40%;
+        float: left;
+        margin-left: 30px;
+    }
+    
+}
+@media screen and (min-width:992px){
+    .service--info--main--1{
+        width: 30%;
+    }
+} 
+/* -----------------contact---------------- */
+.contact{
+    background-color: var(--clr-grey-3);
+    padding: 0 10px;
+}
+.contact--detail--info--title{
+    display: flex;
+    align-items: center;
+    position: relative;
+    margin:10px 0px; 
+}
+.contact--detail--info--title svg{
+    fill: var(--clr-dark);
+
+}
+.contact--detail--info--title h4{
+    position: absolute;
+    left: 35px;
+    top: 5px;
+}
+.contact--detail--info{
+    margin: 0 40px;
+}
+/* --------form---------- */
+.content--form{
+    margin: 20px 50px;
+    padding: 10px;
+    background-color: var(--clr-white);
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+}
+.content--form--info{
+    text-align: center;
+}
+.content--form--info h3{
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    background-clip: text;
+    color: transparent;
+    text-align: center;
+    font-family: var(--ff-design);
+    margin-top: 10px;
+    height: 35%;
+
+}
+.content--form--info input{
+    padding: 16px;
+    width: 100%;
+    height: 100%;
+    margin: 10px 0;
+    border-radius: 3px;
+    border: solid 2px var(--clr-grey-1);
+    outline: none;
+    position: relative;
+    background-color: transparent;
+}
+.textarea--from{
+    padding: 16px;
+    margin: 10px 0;
+    width: 100%;
+    height: 100px;
+    color: var(--clr-grey-2);
+    font-family: var(--ff-secondary);
+    border-radius: 3px;
+    border: solid 2px var(--clr-grey-1);
+    outline: none;
+    position: relative;
+    background-color: transparent;
+}
+.content--form--info button{
+    padding: 10px 30px;
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+    border: none;
+    color: white;
+}
+@media screen and (min-width:768px){
+    .contact--detail,.content--form{
+        width: 31%;
+        float: left;
+    }
+    .contact--detail{
+        margin-left: 250px;
+    }
+}
+/* -------------------contact end------------ */
+/* -----------------footer---------------- */
+.footer{
+    background-color: var(--clr-dark);
+    width: 100%;
+    height: 200px;
+}
+.footer--icon{
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    margin-top: 50px;
+}
+.footer--icon :hover{
+    fill: var(--clr-primary);
+    color: var(--clr-primary);
+}
+.footer--info{
+    color: var(--clr-white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+.company{
+    color: var(--clr-primary);
+}
+/* ---------------------scrool bar---------- */
+body::-webkit-scrollbar{
+    width: 10px;
+}
+body::-webkit-scrollbar-thumb{
+    background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
+border-radius: 5px;
+}
+body::-webkit-scrollbar-track{
+    background-color: var(--clr-grey-3);
+}
+body::-webkit-scrollbar-thumb:hover{
+    background-image: linear-gradient(var(--clr-secondary),var(--clr-primary));
 }
