--- a/style.css
+++ b/style.css
@@ -425,6 +425,7 @@ background-color: var(--clr-white);
     border-radius: 5px;
     transition: var(--transition);
     object-fit: cover;
+    cursor: pointer;
 }
 .product--img--main img:hover{
     box-shadow: 0px 5px 4px rgba(0,0,0,0.6);
@@ -468,6 +469,7 @@ background-color: var(--clr-white);
     position: relative;
     box-shadow: 0 5px 5px rgba(0, 0,0,0.2);
     transition: var(--transition);
+    
 }
 .service--info--main--1:hover{
     transform: translateY(-5px);
@@ -478,6 +480,7 @@ background-color: var(--clr-white);
     overflow: hidden;
     height: 200px;
     object-fit: cover;
+    cursor: pointer;
     
     
 }
@@ -600,6 +603,7 @@ background-color: var(--clr-white);
     background-image: linear-gradient(var(--clr-primary),var(--clr-secondary));
     border: none;
     color: white;
+    cursor: pointer;
 }
 @media screen and (min-width:768px){
     .contact--detail,.content--form{
